Adding a Navigation Bar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
   <header>
-    <!-- Chinmeri Nwagwu -->
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#blog">Blog</a></li>
+      </ul>
+    </nav>
   </header>
+  
   <main>
     <section id="intro">
       <h2>About Me</h2>
