--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
   </header>
 
   <main>
-    <<section id="blog">
+    <section id="blog">
         <h2>Blog</h2>
         <div class="blog-post">
           <h3>First Blog Post</h3>
