--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chinmeri Nwagwu - Blog</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Design/styles.css">
 </head>
 <body>
   <header>
@@ -56,5 +56,8 @@
 
   </footer>
   <script src="script.js"></script>
+
+  <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+
 </body>
 </html>
