Added Meta Tags to improve Search Engine Optimization

--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Chinmeri Nwagwu's personal portfolio">
+  <meta name="keywords" content="Chinmeri Nwagwu, portfolio, IT, Information Technology Management, Illinois Institute of Technology">
   <title>Chinmeri Nwagwu - Projects</title>
   <link rel="stylesheet" href="Design/styles.css">
 </head>
