--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,17 @@
   <meta name="description" content="Chinmeri Nwagwu's personal portfolio">
   <meta name="keywords" content="Chinmeri Nwagwu, portfolio, IT, Information Technology Management, Illinois Institute of Technology">
   <title>Chinmeri Nwagwu - Blog</title>
+  <!-- CSS= -->
   <link rel="stylesheet" href="Design/styles.css">
+
+  <!-- favicons= -->
+<link rel="apple-touch-icon" sizes="180x180" href="Design/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Design/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Design/icons/favicon-16x16.png">
+    <link rel="android-chrome" sizes="192x192" href="Design/icons/android-chrome-192x192.png">
+    <link rel="android-chrome" sizes="512x512" href="Design/icons/android-chrome-512x512.png">
+    <link rel="manifest" href="Design/icons/site.webmanifest">
+    
 </head>
 <body>
   <header>
