--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <link rel="android-chrome" sizes="192x192" href="Design/icons/android-chrome-192x192.png">
     <link rel="android-chrome" sizes="512x512" href="Design/icons/android-chrome-512x512.png">
     <link rel="manifest" href="Design/icons/site.webmanifest">
-    
+
 </head>
 <body>
   <header>
@@ -65,8 +65,17 @@
 
 
   <footer>
-
+    <p>Contact me at:</p>
+    <p>Email: chinmerinwagwub@gmail.com</p>
+    <p>Phone: +1 773-397-1551</p>
+     <!-- ... -->
+     <p>Follow me on:</p>
+     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer">GitHub</a>
+     <a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+     <!-- ... -->
+     <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
+  
   <script src="script.js"></script>
 
   <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
