--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
     <p>Contact me at:</p>
     <p>Email: chinmerinwagwub@gmail.com</p>
     <p>Phone: +1 773-397-1551</p>
+     <!-- ... -->
+     <p>Follow me on:</p>
+     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer">GitHub</a>
+     <a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+     <!-- ... -->
+     <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
   
   <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
