Added FontAwesome Library

--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,10 @@
   <!-- CSS= -->
   <link rel="stylesheet" href="Design/styles.css">
 
+  <!--FontAwesome LIB-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+
   <!-- favicons= -->
 <link rel="apple-touch-icon" sizes="180x180" href="Design/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Design/icons/favicon-32x32.png">
@@ -75,7 +79,7 @@
      <!-- ... -->
      <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
-  
+
   <script src="script.js"></script>
 
   <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
