--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="description" content="Chinmeri Nwagwu's personal portfolio">
   <meta name="keywords" content="Chinmeri Nwagwu, portfolio, IT, Information Technology Management, Illinois Institute of Technology">
   <title>Chinmeri Nwagwu - Portfolio</title>
-  
+  <!--FontAwesome LIB-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
   <!-- CSS= -->
   <link rel="stylesheet" href="Design/styles.css">
 
@@ -46,8 +48,9 @@
     <p>Phone: +1 773-397-1551</p>
      <!-- ... -->
      <p>Follow me on:</p>
-     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer">GitHub</a>
-     <a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+<a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+
      <!-- ... -->
      <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
