--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,10 @@
   <title>Chinmeri Nwagwu - Projects</title>
   <!-- CSS= -->
   <link rel="stylesheet" href="Design/styles.css">
+  
+  <!--FontAwesome LIB-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 
   <!-- favicons= -->
 <link rel="apple-touch-icon" sizes="180x180" href="Design/icons/apple-touch-icon.png">
@@ -97,7 +101,7 @@
       </div>
     </section>
   </main>
-  
+
   <footer>
     <p>Contact me at:</p>
     <p>Email: chinmerinwagwub@gmail.com</p>
