Added Icons from FontAwesome LIB

--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
   <title>Chinmeri Nwagwu - Projects</title>
   <!-- CSS= -->
   <link rel="stylesheet" href="Design/styles.css">
-  
+
   <!--FontAwesome LIB-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -108,8 +108,9 @@
     <p>Phone: +1 773-397-1551</p>
      <!-- ... -->
      <p>Follow me on:</p>
-     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer">GitHub</a>
-     <a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+<a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+
      <!-- ... -->
      <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
