--- a/blog.html
+++ b/blog.html
@@ -74,8 +74,9 @@
     <p>Phone: +1 773-397-1551</p>
      <!-- ... -->
      <p>Follow me on:</p>
-     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer">GitHub</a>
-     <a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+     <a href="https://github.com/JewelPilot" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+<a href="https://linkedin.com/in/chinwagwu" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
+
      <!-- ... -->
      <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
