--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <p>
         Having successfully completed my studies at the Illinois Institute of Technology, I hold a degree in Information and Technology Management. Throughout my academic journey, I engaged in numerous intensive courses and successfully completed complex projects, which greatly enhanced my skills and knowledge for my desired professional path. I am now eager to apply my expertise and capabilities in a full-time internship or employment opportunity. I possess a strong understanding of current technology practices and can contribute valuable insights to the organization or team I collaborate with. Furthermore, I have been trained in conducting thorough research and extracting actionable data, skills that are essential for any team's success.
       </p>
+<!-- CV Button -->
+<a href="https://docs.google.com/document/d/1Iig9pfIKFjmhuDtzJXEB1aY4DRJIxhpj/edit?usp=sharing&ouid=118137257223221344147&rtpof=true&sd=true" download="Chinmeri_Nwagwu_CV.pdf" class="download-button">Download CV</a>
+
     </section>
   </main>
   
