Added new grouping method for verses

--- a/blog.html
+++ b/blog.html
@@ -38,14 +38,16 @@
         <h2>Blog</h2>
         <div class="blog-post">
           <h3>First Blog Post</h3>
-          <p>"Tyger Tyger, burning bright,</p>
-          <p>In the forests of the night;</p>
-          <p>What immortal hand or eye,</p>
-          <p>Could frame thy fearful symmetry?</p>
-          <p>In what distant deeps or skies.</p>
-          <p>Burnt the fire of thine eyes?</p>
-          <p>On what wings dare he aspire?</p>
-          <p>What the hand dare seize the fire?</p>
+          <p>"Tyger Tyger, burning bright,<br>
+            In the forests of the night;<br>
+            What immortal hand or eye,<br>
+            Could frame thy fearful symmetry?"</p>
+            
+            <p>"In what distant deeps or skies.<br>
+            Burnt the fire of thine eyes?<br>
+            On what wings dare he aspire?<br>
+            What the hand dare seize the fire?"</p>
+            
           <p>And what shoulder, and what art,</p>
           <p>Could twist the sinews of thy heart?</p>
           <p>And when thy heart began to beat,</p>
