Added top fuctionality

--- a/blog.html
+++ b/blog.html
@@ -89,6 +89,6 @@
   <script src="script.js"></script>
 
   <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
