--- a/projects.html
+++ b/projects.html
@@ -115,9 +115,9 @@
      <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
 
-  <script src="script.js"></script>
+  
 
   <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
