Changed the button, to show an arrow instead of "Top"

--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,9 @@
 
   <script src="script.js"></script>
 
-  <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="topBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i>
+</button>
   <script src="js/main.js"></script>
 </body>
 </html>
