--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,9 @@
 
   
 
-  <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="topBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i>
+</button>
   <script src="js/main.js"></script>
 </body>
 </html>
