--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
      <p>&copy; 2023 Chinmeri Nwagwu</p>
   </footer>
   
-  <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="topBtn" title="Go to top">
+    <i class="fas fa-arrow-up"></i>
+</button>
   <script src="js/main.js"></script>
 </body>
 </html>
