--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,9 @@
     <link rel="android-chrome" sizes="512x512" href="Design/icons/android-chrome-512x512.png">
     <link rel="manifest" href="Design/icons/site.webmanifest">
 
+    <!--Reveal on Scroll-->
+<script src="https://unpkg.com/scrollreveal"></script>
+
 </head>
 <body>
   <header>
