Added Some goals

--- a/index.html
+++ b/index.html
@@ -98,10 +98,15 @@
     
       
       <section id="future-goals">
-        <h2>Future Goals</h2>
-        <p id="future-goals-text">
-          Memento mori
-        </p>
+        <h2>Goals</h2>
+        <ul id="future-goals-list">
+          <li>Secure a position in a leading IT firm where I can apply my knowledge and skills.</li>
+          <li>Obtain industry-relevant certifications like CompTIA Security+, CISSP, or CISA.</li>
+          <li>Acquire certifications in cloud computing from providers like AWS, Google Cloud, or Microsoft Azure.</li>
+          <li>Assume a leadership role in IT management, driving strategies and leading teams.</li>
+          <li>Stay up-to-date with emerging technologies such as AI, Machine Learning, and Blockchain.</li>
+          <li>Make meaningful contributions to the IT industry and positively impact businesses and communities through technology.</li>
+        </ul>
       </section>
 
 <!-- CV Button -->
